# Android-debloater

./: .gitignore  ADBLT.py  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: RestoreModal.tsx
